# tiny-backprop

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  run_full_test
.github/workflows/: ci.yml
benchmarks/: __init__.py  mem_vs_time_resnet.py  mem_vs_time_transformer.py  run_all.sh  utils.py
docs/: api_reference.md  benchmarks.md  design_notes.md  index.md  integration_guide_jax.md  integration_guide_torch.md  testing.md  theory.md
experiments/diffusion/: README.md  unet_mem_bench.py
experiments/microbench/: README.md  random_dags.py
experiments/transformers/: README.md  gpt2_mem_bench.py  long_context.py
experiments/vision/: README.md  resnet_deep.py
results/: README.md
scripts/: run_full_test.py
src/tiny_backprop/: __init__.py
src/tiny_backprop/analysis/: __init__.py  frontier_width.py  hcp_criteria.py  lower_bounds.py  report.py  width_heuristics.py
src/tiny_backprop/graph/: __init__.py  builders.py  ir.py  topo.py
src/tiny_backprop/integration/: __init__.py
src/tiny_backprop/runtime/: __init__.py  executor.py  hooks.py  profiling.py  storage.py
tests/: conftest.py
tests/integration/: test_jax_mlp.py  test_jax_transformer.py  test_torch_chain_model.py
tests/unit/: test_analysis_report.py  test_benchmark_utils.py  test_block_partition.py  test_checkpoint_plan.py  test_frontier_width.py  test_graph_ir.py  test_hcp_criteria.py  test_interval_tree.py  test_profiling.py  test_replay_plan.py  test_runtime_executor.py  test_runtime_hooks.py  test_storage.py  test_validate.py  test_width_heuristics.py
(+18 files in other folders)
